--- a/index.html
+++ b/index.html
@@ -14,8 +14,21 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1>tea station</h1>
-    <!-- YOUR CODE GOES HERE -->
+    <!-- Navbar -->
+    <!-- End of Navbar -->
+
+    <!-- Header -->
+    <header class="header">
+      <div class="banner">
+        <h2>over one hundred flavors of</h2>
+        <h1>
+          specially <br />
+          crafted tea
+        </h1>
+        <a href="skills.html" class="btn banner-btn">explore</a>
+      </div>
+    </header>
+    <!-- End of Header -->
     <script src="app.js"></script>
   </body>
 </html>
