--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       </div>
     </header>
     <!-- End of Header -->
+
+    <!-- Content Divider -->
+    <div class="content-divider"></div>
+    <!-- End of Content Divider -->
+
     <script src="app.js"></script>
   </body>
 </html>
