--- a/index.html
+++ b/index.html
@@ -34,6 +34,62 @@
     <div class="content-divider"></div>
     <!-- End of Content Divider -->
 
+    <!-- Skills Section -->
+    <section class="skills clearfix">
+      <!-- Single Skill -->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-mug-hot"></i>
+        </span>
+        <h4 class="skill-title">made in US</h4>
+        <p class="skill-text">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium,
+          obcaecati.
+        </p>
+      </article>
+      <!-- End of Single Skill -->
+
+      <!-- Single Skill -->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-glass-cheers"></i>
+        </span>
+        <h4 class="skill-title">relaxation</h4>
+        <p class="skill-text">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium,
+          obcaecati.
+        </p>
+      </article>
+      <!-- End of Single Skill -->
+
+      <!-- Single Skill -->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-bomb"></i>
+        </span>
+        <h4 class="skill-title">energy</h4>
+        <p class="skill-text">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium,
+          obcaecati.
+        </p>
+      </article>
+      <!-- End of Single Skill -->
+
+      <!-- Single Skill -->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-mortar-pestle"></i>
+        </span>
+        <h4 class="skill-title">family recipe</h4>
+        <p class="skill-text">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium,
+          obcaecati.
+        </p>
+      </article>
+      <!-- End of Single Skill -->
+    </section>
+    <!-- End of Skills Section -->
+
     <script src="app.js"></script>
   </body>
 </html>
