--- a/index.html
+++ b/index.html
@@ -90,6 +90,44 @@
     </section>
     <!-- End of Skills Section -->
 
+    <!-- About Section -->
+    <section>
+      <div class="section-center clearfix">
+        <!-- about-img -->
+        <article class="about-img">
+          <!-- about-picture-container -->
+          <div class="about-picture-container">
+            <img
+              src="./images/about-bcg.jpeg"
+              alt="tea-kettle"
+              class="about-picture"
+            />
+          </div>
+        </article>
+      </div>
+      <!-- end of about-img -->
+
+      <!-- about-info -->
+      <article class="about-info">
+        <!-- section-title -->
+        <div class="section-title">
+          <h3>about our</h3>
+          <h2>tea station</h2>
+        </div>
+        <!-- end of section-title -->
+        <p class="about-text">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro
+          aliquam optio necessitatibus nobis sed! Doloribus.
+        </p>
+        <p class="about-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
+          placeat vel quam culpa similique sit?
+        </p>
+        <a href="about.html" class="btn">learn more</a>
+      </article>
+      <!-- end of about-info -->
+    </section>
+    <!-- End of About Section -->
     <script src="app.js"></script>
   </body>
 </html>
