--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
     <!-- About Section -->
     <section>
       <div class="section-center clearfix">
-        <!-- about-img -->
+        <!-- About Image -->
         <article class="about-img">
-          <!-- about-picture-container -->
+          <!-- About Picture Container -->
           <div class="about-picture-container">
             <img
               src="./images/about-bcg.jpeg"
@@ -104,16 +104,17 @@
             />
           </div>
         </article>
-        <!-- end of about-img -->
+        <!-- End of About Image -->
 
-        <!-- about-info -->
+        <!-- About Info -->
         <article class="about-info">
-          <!-- section-title -->
+          <!-- Section Title -->
           <div class="section-title">
             <h3>about our</h3>
             <h2>tea station</h2>
           </div>
-          <!-- end of section-title -->
+          <!-- End of Section Title -->
+
           <p class="about-text">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro
             aliquam optio necessitatibus nobis sed! Doloribus.
@@ -124,10 +125,74 @@
           </p>
           <a href="about.html" class="btn">learn more</a>
         </article>
-        <!-- end of about-info -->
+        <!--End of About Info -->
       </div>
     </section>
     <!-- End of About Section -->
+
+    <!-- Products Section -->
+    <section class="products">
+      <div class="section-center clearfix">
+        <!-- Products Info -->
+        <article class="products-info">
+          <!-- Section Title -->
+          <div class="section-title">
+            <h3>check out</h3>
+            <h2>our products</h2>
+          </div>
+          <!-- End of Section Title -->
+          <p class="products-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum,
+            labore. Soluta commodi at veniam aspernatur ut vero id nisi
+            voluptatem ipsa, possimus, minima perspiciatis voluptatibus!
+          </p>
+          <a href="products.html" class="btn">inventory</a>
+        </article>
+        <!-- End of Products Info -->
+
+        <!-- Products Inventory -->
+        <article class="products-inventory clearfix">
+          <!-- Single Product -->
+          <div class="product">
+            <img
+              src="./images/product-1.jpeg"
+              alt="ginger-peach-tea"
+              class="product-img"
+            />
+            <h4 class="product-price">ginger peach tea</h4>
+            <h4 class="product-price">$6.99</h4>
+          </div>
+          <!-- End of Single Product -->
+
+          <!-- Single Product -->
+          <div class="product">
+            <img
+              src="./images/product-2.jpeg"
+              alt="ginger-peach-tea"
+              class="product-img"
+            />
+            <h4 class="product-price">Fruit Sangria</h4>
+            <h4 class="product-price">$6.99</h4>
+          </div>
+          <!-- End of Single Product -->
+
+          <!-- Single Product -->
+          <div class="product">
+            <img
+              src="./images/product-3.jpeg"
+              alt="ginger-peach-tea"
+              class="product-img"
+            />
+            <h4 class="product-price">White Tea</h4>
+            <h4 class="product-price">$6.99</h4>
+          </div>
+          <!-- End of Single Product -->
+        </article>
+        <!-- End of Products Inventory -->
+      </div>
+    </section>
+    <!-- End of Products Section -->
+
     <script src="app.js"></script>
   </body>
 </html>
