--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               alt="ginger-peach-tea"
               class="product-img"
             />
-            <h4 class="product-price">ginger peach tea</h4>
+            <h4 class="product-title">ginger peach tea</h4>
             <h4 class="product-price">$6.99</h4>
           </div>
           <!-- End of Single Product -->
@@ -171,7 +171,7 @@
               alt="ginger-peach-tea"
               class="product-img"
             />
-            <h4 class="product-price">Fruit Sangria</h4>
+            <h4 class="product-title">Fruit Sangria</h4>
             <h4 class="product-price">$6.99</h4>
           </div>
           <!-- End of Single Product -->
@@ -183,7 +183,7 @@
               alt="ginger-peach-tea"
               class="product-img"
             />
-            <h4 class="product-price">White Tea</h4>
+            <h4 class="product-title">White Tea</h4>
             <h4 class="product-price">$6.99</h4>
           </div>
           <!-- End of Single Product -->
