--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <div class="product">
             <img
               src="./images/product-2.jpeg"
-              alt="ginger-peach-tea"
+              alt="fruit-sangria"
               class="product-img"
             />
             <h4 class="product-title">Fruit Sangria</h4>
@@ -180,7 +180,7 @@
           <div class="product">
             <img
               src="./images/product-3.jpeg"
-              alt="ginger-peach-tea"
+              alt="white-tea"
               class="product-img"
             />
             <h4 class="product-title">White Tea</h4>
@@ -192,6 +192,118 @@
       </div>
     </section>
     <!-- End of Products Section -->
+
+    <!-- Services Section -->
+    <section class="services">
+      <!-- Section Title -->
+      <div class="section-title services-title">
+        <h3>explore</h3>
+        <h2>our services</h2>
+      </div>
+      <!-- End of Section Title -->
+
+      <div class="section-center clearfix">
+        <!-- Single Service -->
+        <article class="service-card">
+          <!-- Service Image Container -->
+          <div class="service-image-container">
+            <!-- Service Image -->
+            <img
+              src="./images/product-1.jpeg"
+              alt="ginger-peach-tea"
+              class="service-img"
+            />
+            <!-- End of Service Image -->
+
+            <!-- Service Icon -->
+            <span class="service-icon">
+              <i class="fas fa-mortar-pestle fa-fw"></i>
+            </span>
+            <!-- End of Service Icon -->
+          </div>
+          <!-- End of Service Image Container -->
+
+          <!-- Services Info -->
+          <div class="service-info">
+            <h4>custom recipes</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum
+              sit adipisci impedit iusto, vitae eius!
+            </p>
+            <a href="products.html" class="btn service-btn">read more</a>
+          </div>
+          <!-- End of Services Info -->
+        </article>
+        <!-- End of Single Service -->
+
+        <!-- Single Service -->
+        <article class="service-card">
+          <!-- Service Image Container -->
+          <div class="service-image-container">
+            <!-- Service Image -->
+            <img
+              src="./images/product-2.jpeg"
+              alt="fruit-sangria"
+              class="service-img"
+            />
+            <!-- End of Service Image -->
+
+            <!-- Service Icon -->
+            <span class="service-icon">
+              <i class="fas fa-home fa-fw"></i>
+            </span>
+            <!-- End of Service Icon -->
+          </div>
+          <!-- End of Service Image Container -->
+
+          <!-- Services Info -->
+          <div class="service-info">
+            <h4>home delivery</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Architecto quis commodi excepturi, illo enim dolorem.
+            </p>
+            <a href="products.html" class="btn service-btn">read more</a>
+          </div>
+          <!-- End of Services Info -->
+        </article>
+        <!-- End of Single Service -->
+
+        <!-- Single Service -->
+        <article class="service-card">
+          <!-- Service Image Container -->
+          <div class="service-image-container">
+            <!-- Service Image -->
+            <img
+              src="./images/product-3.jpeg"
+              alt="white-tea"
+              class="service-img"
+            />
+            <!-- End of Service Image -->
+
+            <!-- Service Icon -->
+            <span class="service-icon">
+              <i class="fas fa-mug-hot fa-fw"></i>
+            </span>
+            <!-- End of Service Icon -->
+          </div>
+          <!-- End of Service Image Container -->
+
+          <!-- Services Info -->
+          <div class="service-info">
+            <h4>tea aging</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos rem
+              quas voluptas ad, molestiae recusandae!
+            </p>
+            <a href="products.html" class="btn service-btn">read more</a>
+          </div>
+          <!-- End of Services Info -->
+        </article>
+        <!-- End of Single Service -->
+      </div>
+    </section>
+    <!-- End of Services Section -->
 
     <script src="app.js"></script>
   </body>
