--- a/index.html
+++ b/index.html
@@ -305,6 +305,81 @@
     </section>
     <!-- End of Services Section -->
 
+    <!-- Contact Section -->
+    <section class="contact">
+      <div class="section-center clearfix">
+        <!-- Contact Info -->
+        <article class="contact-info">
+          <!-- Contact Item -->
+          <h4 class="contact-title">
+            <span class="contact-icon"
+              ><i class="fas fa-location-arrow"></i
+            ></span>
+            address
+          </h4>
+          <h4 class="contact-text">
+            1601 S. California Ave<br />
+            Palo Alto CA 94304
+          </h4>
+          <!-- End of Contact Item -->
+
+          <!-- Contact Item -->
+          <h4 class="contact-title">
+            <span class="contact-icon">
+              <i class="fas fa-envelope"></i>
+            </span>
+            email
+          </h4>
+          <h4 class="contact-text">praveen@developer.com</h4>
+          <!-- End of Contact Item -->
+
+          <!-- Contact Item -->
+          <h4 class="contact-title">
+            <span class="contact-icon">
+              <i class="fas fa-phone"></i>
+            </span>
+            telephone
+          </h4>
+          <h4 class="contact-text">+(123)456-7890</h4>
+          <!-- End of Contact Item -->
+        </article>
+        <!-- End of Contact Info -->
+
+        <!-- Contact Form -->
+        <article class="contact-form">
+          <h3>contact us</h3>
+          <form>
+            <div class="form-group">
+              <!-- Inputs -->
+              <input
+                type="text"
+                placeholder="name"
+                name="name"
+                class="form-control"
+              />
+              <input
+                type="email"
+                placeholder="email"
+                name="email"
+                class="form-control"
+              />
+              <textarea
+                placeholder="message"
+                name="message"
+                class="form-control"
+                rows="5"
+              ></textarea>
+            </div>
+
+            <!-- Button -->
+            <button type="submit" class="btn submit-btn">submit here</button>
+          </form>
+        </article>
+        <!-- End of Contact Form -->
+      </div>
+    </section>
+    <!-- End of Contact Section -->
+
     <script src="app.js"></script>
   </body>
 </html>
