--- a/index.html
+++ b/index.html
@@ -311,36 +311,42 @@
         <!-- Contact Info -->
         <article class="contact-info">
           <!-- Contact Item -->
-          <h4 class="contact-title">
-            <span class="contact-icon"
-              ><i class="fas fa-location-arrow"></i
-            ></span>
-            address
-          </h4>
-          <h4 class="contact-text">
-            1601 S. California Ave<br />
-            Palo Alto CA 94304
-          </h4>
+          <div class="contact-item">
+            <h4 class="contact-title">
+              <span class="contact-icon"
+                ><i class="fas fa-location-arrow"></i
+              ></span>
+              address
+            </h4>
+            <h4 class="contact-text">
+              1601 S. California Ave<br />
+              Palo Alto CA 94304
+            </h4>
+          </div>
           <!-- End of Contact Item -->
 
           <!-- Contact Item -->
-          <h4 class="contact-title">
-            <span class="contact-icon">
-              <i class="fas fa-envelope"></i>
-            </span>
-            email
-          </h4>
-          <h4 class="contact-text">praveen@developer.com</h4>
+          <div class="contact-item">
+            <h4 class="contact-title">
+              <span class="contact-icon">
+                <i class="fas fa-envelope"></i>
+              </span>
+              email
+            </h4>
+            <h4 class="contact-text">praveen@developer.com</h4>
+          </div>
           <!-- End of Contact Item -->
 
           <!-- Contact Item -->
-          <h4 class="contact-title">
-            <span class="contact-icon">
-              <i class="fas fa-phone"></i>
-            </span>
-            telephone
-          </h4>
-          <h4 class="contact-text">+(123)456-7890</h4>
+          <div class="contact-item">
+            <h4 class="contact-title">
+              <span class="contact-icon">
+                <i class="fas fa-phone"></i>
+              </span>
+              telephone
+            </h4>
+            <h4 class="contact-text">+(123)456-7890</h4>
+          </div>
           <!-- End of Contact Item -->
         </article>
         <!-- End of Contact Info -->
