--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
       </div>
       <h4 class="footer-text">
         &copy;<span id="date"></span>
-        <span>tea station</span> all rights reserved
+        <span class="company">tea station</span> all rights reserved
       </h4>
     </div>
   </footer>
