--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
       <!-- Contact Form -->
       <article class="contact-form">
         <h3>contact us</h3>
-        <form>
+        <form action="https://formspree.io/f/mqkjrzep" method="POST">
           <div class="form-group">
             <!-- Inputs -->
             <input type="text" placeholder="name" name="name" class="form-control" />
