--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Tea Station || About</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <!-- font-awesome -->
     <link rel="stylesheet" href="./fontawesome-free-5.12.1-web/css/all.min.css" />
     <!-- custom css -->
